salesforce/force-app/main/default/objects/TeamsCredential__mdt/TeamsCredential__mdt.object-meta.xml
<CustomObject>
    <description>Stores Azure AD credentials for the Microsoft Teams Graph API integration.</description>
    <label>Teams Credential</label>
    <pluralLabel>Teams Credentials</pluralLabel>
</CustomObject>