salesforce/force-app/main/default/objects/TeamsCredential__mdt/fields/OrganizerUpn__c.field-meta.xml
<CustomField>
    <fullName>OrganizerUpn__c</fullName>
    <label>Organizer UPN</label>
    <description>Microsoft 365 email (UPN) of the user who will own the Teams meetings, e.g. admin@tenant.onmicrosoft.com</description>
    <length>255</length>
    <type>Text</type>
</CustomField>