salesforce/force-app/main/default/objects/TeamsCredential__mdt/fields/TenantId__c.field-meta.xml
<CustomField>
    <fullName>TenantId__c</fullName>
    <label>Tenant ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>